tests/golden/error/eq_sugar_type_mismatch.tg
// == sugar with mismatched types: Nat vs Bool
fn f() -> 0 == true { refl }
